Moved the navigation bar from the right edge of the page to left edge to prevent it from often overlapping with the search bar.

--- a/project/savegame/static/v2/css/base.css
+++ b/project/savegame/static/v2/css/base.css
@@ -13,11 +13,11 @@ body {
 
 #header {
     width: 100%;
-    height: 160px;
+    height: 200px;
     margin: auto;
     border-bottom: 1px solid black;
     padding: 0px;
-    background: -webkit-gradient(linear, left -10, left 180, from(#000000), to(#ffffff));
+    background: -webkit-gradient(linear, left -10, left 200, from(#000000), to(#ffffff));
     background: -moz-linear-gradient(top, rgba(0, 0, 0, 1), rgba(255, 255, 255, 0));
 }
 
@@ -112,8 +112,7 @@ body {
     height: auto;
 }
 
-#footer
-{
+#footer {
     width: 90%;
     margin-left: 5%;
     margin-right: 5%;
@@ -139,8 +138,8 @@ body {
 
 #search_div {
     float: right;
-    margin-top: 120px;
-    margin-left: 30%;
+    margin-top: 100px;
+    margin-left: 35%;
     position: absolute;
 
 }
@@ -155,7 +154,6 @@ body {
 
 #search_button {
     height: 35px;
-
     font-size: 18px;
     background-color: #EDEDED;
     border-radius: 10px;
